# Weather_monitoring_group8

./: CMakeLists.txt  README.md  build.bat  main.cpp  test.cpp
include/: dataBase.hpp  dataCollector.hpp  dataOutput.hpp  dataStatistics.hpp  globals.hpp  lifetimeStatistics.hpp  measurementData.hpp  sensor.hpp  sensorData.hpp  sensorManager.hpp
src/: CMakeLists.txt  dataCollector.cpp  dataOutput.cpp  dataStatistics.cpp  globals.cpp  lifetimeStatistics.cpp  sensor.cpp  sensorManager.cpp
test/: CMakeLists.txt
test/DataCollector/: dataCollector.test.cpp
test/dataCollector/: dataCollector.test.cpp
test/lifetimeStatistics/: lifetimeStatistics.test.cpp
test/sensor/: sensor.test.cpp
test/sensorManager/: sensorManager.test.cpp
test/statistics/: dateStatistics.cpp  lifetimeStatistics.test.cpp
